# task-plan-mcp-server

./: .gitignore  client-config-demo.json  client-config-demo.md  package.json  pyproject.toml
.claude/skills/task-plan-assistant/: SKILL.md  skill.json
.claude/skills/task-plan-assistant/workflows/: compress-history.yml  create-context.yml  decision.yml  query-memory.yml  report-action-result.yml  save-plan-feedback.yml  save-tool-execution.yml
.claude/skills/task-plan-mcp-server/: SKILL.md  skill.json
.claude/skills/task-plan-mcp-server/workflows/: runtime-checklist.yaml  setup-checklist.yaml
integration/claude-skill/: generate-skill.prompt
integration/trae-rules/: generate-rules.prompt
src/: __init__.py  server.py  tool_call.py  types.py
src/memory/: __init__.py  config.yaml  manager.py  types.py
src/planner/: __init__.py  dynamic_adjuster.py  planner.py
src/tools/: __init__.py  registry.py
ui/context-manager/: index.html  package-lock.json  package.json  vite.config.js
ui/context-manager/src/: App.vue
ui/context-manager/src/assets/: main.css
ui/context-manager/src/router/: index.js
ui/context-manager/src/stores/: context.js
ui/context-manager/src/views/: ContextDetail.vue  ContextList.vue
