[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-plan-mcp-server"
version = "1.0.0"
description = "MCP Server with ReMe memory integration for dynamic tool planning"
requires-python = ">=3.10"
dependencies = [
    "reme-ai>=0.1.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
